feat: optimize Dockerfiles with stable base images and enhanced dependencies

--- a/benchmarks/gpu/inference/Dockerfile
+++ b/benchmarks/gpu/inference/Dockerfile
@@ -1,16 +1,17 @@
 # GPU Inference Dockerfile
-FROM nvidia/cuda:11.8-devel-ubuntu20.04
+# Use official Python image with TensorFlow support
+FROM python:3.11-slim
 
 # Set environment variables
 ENV DEBIAN_FRONTEND=noninteractive
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
+ENV CUDA_HOME=/usr/local/cuda
+ENV PATH=${CUDA_HOME}/bin:${PATH}
+ENV LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
 
-# Install system dependencies
+# Install system dependencies and CUDA toolkit
 RUN apt-get update && apt-get install -y \
-    python3 \
-    python3-pip \
-    python3-venv \
     build-essential \
     cmake \
     git \
@@ -18,15 +19,32 @@ RUN apt-get update && apt-get install -y \
     curl \
     htop \
     nvtop \
+    nvidia-cuda-toolkit \
+    nvidia-cuda-dev \
+    libcudnn8 \
+    libcudnn8-dev \
     && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies with specific versions for better compatibility
+RUN pip3 install --no-cache-dir --upgrade pip setuptools wheel
 
 # Set working directory
 WORKDIR /app
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
-RUN pip3 install --no-cache-dir --upgrade pip && \
-    pip3 install --no-cache-dir -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
+
+# Install additional useful packages for inference
+RUN pip3 install --no-cache-dir \
+    tensorflow-serving-api \
+    onnxruntime-gpu \
+    opencv-python \
+    pillow \
+    requests \
+    flask \
+    fastapi \
+    uvicorn
 
 # Copy benchmark script and config
 COPY bert_tf_serving.py .
@@ -34,6 +52,10 @@ COPY ../../../config/gpu/nvidia.yaml ./config.yaml
 
 # Create output directory
 RUN mkdir -p /app/reports
+
+# Add health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD python3 -c "import tensorflow as tf; print('GPU available:', len(tf.config.list_physical_devices('GPU')))" || exit 1
 
 # Set default command
 CMD ["python3", "bert_tf_serving.py", "--config", "config.yaml", "--output", "/app/reports"] 
