refactor: move config files to each test category and update Dockerfile paths

--- a/benchmarks/gpu/stress/Dockerfile
+++ b/benchmarks/gpu/stress/Dockerfile
@@ -46,7 +46,7 @@ RUN pip3 install --no-cache-dir \
 
 # Copy benchmark script and config
 COPY memory_bandwidth_test.py .
-COPY ../../../config/gpu/nvidia.yaml ./config.yaml
+COPY config/nvidia.yaml ./config.yaml
 
 # Create output directory
 RUN mkdir -p /app/reports
