--- a/benchmarks/gpu/training/Dockerfile
+++ b/benchmarks/gpu/training/Dockerfile
@@ -47,7 +47,7 @@ RUN pip3 install --no-cache-dir \
 
 # Copy benchmark script and config
 COPY resnet50_pytorch.py .
-COPY ../../../config/gpu/nvidia.yaml ./config.yaml
+COPY config/nvidia.yaml ./config.yaml
 
 # Create output directory
 RUN mkdir -p /app/reports
