chore: rename all config files to config.yaml and update Dockerfile paths

--- a/benchmarks/npu/inference/Dockerfile
+++ b/benchmarks/npu/inference/Dockerfile
@@ -46,7 +46,7 @@ RUN pip3 install --no-cache-dir \
 
 # Copy benchmark script and config
 COPY bert_mindspore.py .
-COPY config/ascend.yaml ./config.yaml
+COPY config/config.yaml ./config.yaml
 
 # Create output directory
 RUN mkdir -p /app/reports
