--- a/benchmarks/gpu/inference/Dockerfile
+++ b/benchmarks/gpu/inference/Dockerfile
@@ -48,7 +48,7 @@ RUN pip3 install --no-cache-dir \
 
 # Copy benchmark script and config
 COPY bert_inference.py .
-COPY config/config.yaml ./config.yaml
+COPY config.yaml ./config.yaml
 
 # Create output directory
 RUN mkdir -p /app/reports
