--- a/benchmarks/npu/training/config.yaml
+++ b/benchmarks/npu/training/config.yaml
@@ -1,35 +1,18 @@
-# Huawei Ascend NPU Test Configuration
+# Huawei Ascend NPU Training Configuration
 hardware:
   type: "ascend"
   driver_version: "auto"
   cann_version: "auto"
 
-benchmarks:
-  training:
-    resnet50_mindspore:
-      enabled: true
-      batch_size: 32
-      epochs: 10
-      learning_rate: 0.001
-      optimizer: "adam"
-      dataset: "imagenet"
-      mixed_precision: true
-      
-  inference:
-    bert_mindspore:
-      enabled: true
-      batch_size: 1
-      sequence_length: 512
-      model_path: "/models/bert-base-uncased"
-      iterations: 1000
-      
-  stress:
-    memory_bandwidth:
-      enabled: true
-      test_duration: 300  # seconds
-      memory_size: "8GB"
-      bandwidth_test: true
-      latency_test: true
+training:
+  resnet50_mindspore:
+    enabled: true
+    batch_size: 32
+    epochs: 10
+    learning_rate: 0.001
+    optimizer: "adam"
+    dataset: "imagenet"
+    mixed_precision: true
 
 metrics:
   collection_interval: 1  # seconds
@@ -42,11 +25,9 @@ metrics:
   system_metrics:
     - cpu_usage
     - memory_usage
-    - disk_io
-    - network_io
 
 reporting:
-  output_dir: "../reports"
-  format: ["json", "csv", "html"]
+  output_dir: "/app/reports"
+  format: ["json", "csv"]
   generate_plots: true
   save_logs: true 
