fix: update Dockerfile to use memory_bandwidth.py instead of memory_bandwidth_test.py

--- a/benchmarks/npu/stress/Dockerfile
+++ b/benchmarks/npu/stress/Dockerfile
@@ -43,7 +43,7 @@ RUN pip3 install --no-cache-dir \
     pandas
 
 # Copy benchmark script and config
-COPY memory_bandwidth_test.py .
+COPY memory_bandwidth.py .
 COPY config.yaml ./config.yaml
 
 # Create output directory
