--- a/benchmarks/gpu/stress/Dockerfile
+++ b/benchmarks/gpu/stress/Dockerfile
@@ -45,7 +45,7 @@ RUN pip3 install --no-cache-dir \
     numpy
 
 # Copy benchmark script and config
-COPY memory_bandwidth_test.py .
+COPY memory_bandwidth.py .
 COPY config.yaml ./config.yaml
 
 # Create output directory
