--- a/npu/stress/Dockerfile
+++ b/npu/stress/Dockerfile
@@ -1,6 +1,6 @@
 # NPU Stress Test Dockerfile
 # Use Huawei MindSpore official image
-FROM mindspore/mindspore-cpu:2.2.0
+FROM ascendai/pytorch:2.2.0
 
 # Set environment variables
 ENV DEBIAN_FRONTEND=noninteractive
