--- a/.github/workflows/build-gpu-images.yml
+++ b/.github/workflows/build-gpu-images.yml
@@ -64,7 +64,7 @@ jobs:
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
-          type=raw,value=${{ matrix.tag }}-latest,enable={{is_default_branch}}
+          type=raw,value=${{ matrix.tag }}-latest
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
