--- a/.github/workflows/build-npu-images.yml
+++ b/.github/workflows/build-npu-images.yml
@@ -29,11 +29,14 @@ on:
 env:
   REGISTRY: docker.io
   IMAGE_NAME: shaowenchen/xpu-benchmark
+  DOCKER_BUILDKIT: 1
+  BUILDKIT_PROGRESS: plain
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 1
       matrix:
         image_type: [training, inference, stress]
         include:
@@ -53,9 +56,19 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        sparse-checkout: |
+          npu/
+          config/npu/
+          .github/workflows/build-npu-images.yml
+        fetch-depth: 1
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+      with:
+        driver-opts: |
+          image=moby/buildkit:v0.12.0
+        buildkitd-flags: --debug --oci-worker-gc --oci-worker-gc-interval=300
 
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
@@ -71,7 +84,13 @@ jobs:
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
-          type=raw,value=${{ matrix.tag }}-latest,enable={{is_default_branch}}
+          type=raw,value=${{ matrix.tag }}-latest
+
+    - name: Pre-cleanup
+      run: |
+        docker system prune -f
+        docker builder prune -f
+        df -h
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
@@ -81,13 +100,36 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        platforms: linux/amd64,linux/arm64
+        cache-from: |
+          type=gha,scope=${{ matrix.tag }}-${{ github.sha }}
+          type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tag }}-cache
+        cache-to: |
+          type=gha,mode=max,scope=${{ matrix.tag }}-${{ github.sha }}
+          type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tag }}-cache,mode=max
+        platforms: linux/amd64
+        build-args: |
+          BUILDKIT_INLINE_CACHE=1
+          DOCKER_BUILDKIT=1
+        outputs: type=image,compression=gzip,compression-level=9
+        provenance: false
+
+    - name: Post-cleanup
+      if: always()
+      run: |
+        docker system prune -f
+        docker builder prune -f
+        docker image prune -f
+        docker buildx prune -f
 
     - name: Build summary
       if: always()
       run: |
         echo "Built image: ${{ matrix.tag }}"
         echo "Context: ${{ matrix.context }}"
-        echo "Dockerfile: ${{ matrix.dockerfile }}" 
+        echo "Dockerfile: ${{ matrix.dockerfile }}"
+        echo "=== Disk Usage ==="
+        df -h
+        echo "=== Docker System Info ==="
+        docker system df
+        echo "=== Build Cache Info ==="
+        docker buildx du 
