--- a/.github/workflows/build-npu-images.yml
+++ b/.github/workflows/build-npu-images.yml
@@ -81,7 +81,7 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
 
     - name: Build summary
       if: always()
