--- a/npu/inference/Dockerfile
+++ b/npu/inference/Dockerfile
@@ -9,6 +9,11 @@ ENV PYTHONDONTWRITEBYTECODE=1
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
+    python3 \
+    python3-pip \
+    python3-dev \
+    build-essential \
+    cmake \
     git \
     wget \
     curl \
