--- a/.github/workflows/build-npu-images.yml
+++ b/.github/workflows/build-npu-images.yml
@@ -31,25 +31,9 @@ env:
   IMAGE_NAME: shaowenchen/xpu-benchmark
 
 jobs:
-  build:
+  build-training:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        image_type: [training, inference, stress]
-        include:
-          - image_type: training
-            dockerfile: npu/training/Dockerfile
-            context: npu/training
-            tag: npu-training
-          - image_type: inference
-            dockerfile: npu/inference/Dockerfile
-            context: npu/inference
-            tag: npu-inference
-          - image_type: stress
-            dockerfile: npu/stress/Dockerfile
-            context: npu/stress
-            tag: npu-stress
-
+    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'training' || github.event.inputs.image_type == ''
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -71,13 +55,13 @@ jobs:
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
-          type=raw,value=${{ matrix.tag }}-latest
+          type=raw,value=npu-training-latest
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
-        context: ${{ matrix.context }}
-        file: ${{ matrix.dockerfile }}
+        context: npu/training
+        file: npu/training/Dockerfile
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
@@ -86,6 +70,94 @@ jobs:
     - name: Build summary
       if: always()
       run: |
-        echo "Built image: ${{ matrix.tag }}"
-        echo "Context: ${{ matrix.context }}"
-        echo "Dockerfile: ${{ matrix.dockerfile }}" 
+        echo "Built image: npu-training"
+        echo "Context: npu/training"
+        echo "Dockerfile: npu/training/Dockerfile"
+
+  build-inference:
+    runs-on: ubuntu-latest
+    needs: build-training
+    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'inference' || github.event.inputs.image_type == ''
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=raw,value=npu-inference-latest
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: npu/inference
+        file: npu/inference/Dockerfile
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        platforms: linux/amd64,linux/arm64
+
+    - name: Build summary
+      if: always()
+      run: |
+        echo "Built image: npu-inference"
+        echo "Context: npu/inference"
+        echo "Dockerfile: npu/inference/Dockerfile"
+
+  build-stress:
+    runs-on: ubuntu-latest
+    needs: build-inference
+    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'stress' || github.event.inputs.image_type == ''
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=raw,value=npu-stress-latest
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: npu/stress
+        file: npu/stress/Dockerfile
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        platforms: linux/amd64,linux/arm64
+
+    - name: Build summary
+      if: always()
+      run: |
+        echo "Built image: npu-stress"
+        echo "Context: npu/stress"
+        echo "Dockerfile: npu/stress/Dockerfile" 
