--- a/npu/stress/k8s-deploy.yaml
+++ b/npu/stress/k8s-deploy.yaml
@@ -1,22 +1,26 @@
-apiVersion: batch/v1
-kind: Job
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: gpu-stress-test
+  name: npu-stress-deploy
   namespace: default
   labels:
-    app: gpu-benchmark
+    app: npu-benchmark
     type: stress
 spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: npu-benchmark
+      type: stress
   template:
     metadata:
       labels:
-        app: gpu-benchmark
+        app: npu-benchmark
         type: stress
     spec:
-      restartPolicy: Never
       containers:
-      - name: gpu-stress
-        image: shaowenchen/xpu-benchmark:gpu-stress-latest
+      - name: npu-stress
+        image: shaowenchen/xpu-benchmark:npu-stress-latest
         imagePullPolicy: Always
         env:
         - name: NVIDIA_VISIBLE_DEVICES
@@ -39,24 +43,24 @@ spec:
       volumes:
       - name: logs-volume
         persistentVolumeClaim:
-          claimName: gpu-logs-pvc
+          claimName: npu-logs-pvc
       - name: results-volume
         persistentVolumeClaim:
-          claimName: gpu-results-pvc
+          claimName: npu-results-pvc
       - name: config-volume
         configMap:
-          name: gpu-stress-config
+          name: npu-stress-config
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: gpu-stress-config
+  name: npu-stress-config
   namespace: default
 data:
   config.yaml: |
-    # GPU Stress Configuration
+    # NPU Stress Configuration
     test_type: memory_bandwidth
     duration: 300
     iterations: 1000
-    device: gpu
+    device: npu
     log_level: INFO 
