--- a/gpu/inference/k8s-deploy.yaml
+++ b/gpu/inference/k8s-deploy.yaml
@@ -65,14 +65,16 @@ metadata:
     app: gpu-benchmark
     type: inference
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - port: 8080
     targetPort: 8080
+    nodePort: 30082
     protocol: TCP
     name: http
   - port: 8081
     targetPort: 8081
+    nodePort: 30083
     protocol: TCP
     name: grpc
   selector:
