--- a/npu/inference/k8s-deploy.yaml
+++ b/npu/inference/k8s-deploy.yaml
@@ -65,14 +65,16 @@ metadata:
     app: npu-benchmark
     type: inference
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - port: 8080
     targetPort: 8080
+    nodePort: 30080
     protocol: TCP
     name: http
   - port: 8081
     targetPort: 8081
+    nodePort: 30081
     protocol: TCP
     name: grpc
   selector:
