--- a/.github/workflows/build-npu-images.yml
+++ b/.github/workflows/build-npu-images.yml
@@ -28,7 +28,7 @@ on:
       platform:
         description: 'Platform to build'
         required: false
-        default: 'amd64'
+        default: 'both'
         type: choice
         options:
           - amd64
@@ -85,7 +85,7 @@ jobs:
 
   build-training-arm64:
     runs-on: ubuntu-latest
-    if: (github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'training' || github.event.inputs.image_type == '') && (github.event.inputs.platform == 'arm64' || github.event.inputs.platform == 'both')
+    if: (github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'training' || github.event.inputs.image_type == '') && (github.event.inputs.platform == 'arm64' || github.event.inputs.platform == 'both' || github.event.inputs.platform == '')
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -173,7 +173,7 @@ jobs:
   build-inference-arm64:
     runs-on: ubuntu-latest
     needs: [build-training-amd64, build-training-arm64]
-    if: (github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'inference' || github.event.inputs.image_type == '') && (github.event.inputs.platform == 'arm64' || github.event.inputs.platform == 'both')
+    if: (github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'inference' || github.event.inputs.image_type == '') && (github.event.inputs.platform == 'arm64' || github.event.inputs.platform == 'both' || github.event.inputs.platform == '')
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -261,7 +261,7 @@ jobs:
   build-stress-arm64:
     runs-on: ubuntu-latest
     needs: [build-inference-amd64, build-inference-arm64]
-    if: (github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'stress' || github.event.inputs.image_type == '') && (github.event.inputs.platform == 'arm64' || github.event.inputs.platform == 'both')
+    if: (github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'stress' || github.event.inputs.image_type == '') && (github.event.inputs.platform == 'arm64' || github.event.inputs.platform == 'both' || github.event.inputs.platform == '')
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
