fix: 修复多架构创建步骤并重命名summary步骤

--- a/.github/workflows/build-npu-images.yml
+++ b/.github/workflows/build-npu-images.yml
@@ -222,7 +222,7 @@ jobs:
         docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest
       shell: bash
 
-    - name: Build summary stress
+    - name: Create multi-arch stress image
       if: always()
       run: |
         echo "Built arm64 image: npu-stress-latest-arm64"
