fix: 修复ARM64架构构建问题，使用多架构Ubuntu基础镜像

--- a/npu/inference/Dockerfile
+++ b/npu/inference/Dockerfile
@@ -1,6 +1,6 @@
 # NPU Inference Dockerfile
-# Use Huawei MindSpore official image
-FROM ascendai/pytorch:2.2.0
+# Use multi-arch Ubuntu base image
+FROM --platform=$TARGETPLATFORM ubuntu:22.04
 
 # Set environment variables
 ENV DEBIAN_FRONTEND=noninteractive
@@ -20,6 +20,9 @@ RUN apt-get update && apt-get install -y \
 # Install Python dependencies with specific versions for better compatibility
 RUN pip3 install --no-cache-dir --upgrade pip setuptools wheel
 
+# Install PyTorch (CPU version for compatibility)
+RUN pip3 install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+
 # Set working directory
 WORKDIR /app
 
@@ -36,7 +39,7 @@ RUN mkdir -p /app/reports
 
 # Add health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python3 -c "import mindspore; print('MindSpore version:', mindspore.__version__)" || exit 1
+    CMD python3 -c "import torch; print('PyTorch version:', torch.__version__)" || exit 1
 
 # Set default command
 CMD ["python3", "bert_mindspore.py", "--config", "config.yaml", "--output", "/app/reports"] 
