--- a/.github/workflows/build-npu-images.yml
+++ b/.github/workflows/build-npu-images.yml
@@ -65,7 +65,7 @@ jobs:
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
-          type=raw,value=${{ matrix.tag }}-latest
+          type=raw,value=${{ matrix.tag }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
