--- a/.github/workflows/build-gpu-images.yml
+++ b/.github/workflows/build-gpu-images.yml
@@ -2,22 +2,10 @@ name: Build GPU Docker Images
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ master ]
     paths:
       - 'gpu/**'
       - '.github/workflows/build-gpu-images.yml'
-  workflow_dispatch:
-    inputs:
-      image_type:
-        description: 'Image type to build'
-        required: false
-        default: 'all'
-        type: choice
-        options:
-          - all
-          - training
-          - inference
-          - stress
 
 env:
   REGISTRY: docker.io
@@ -51,7 +39,6 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: Log in to Docker Hub
-      if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
@@ -71,16 +58,8 @@ jobs:
       with:
         context: ${{ matrix.context }}
         file: ${{ matrix.dockerfile }}
-        push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
         platforms: linux/amd64,linux/arm64
-
-    - name: Build summary
-      if: always()
-      run: |
-        echo "Built image: ${{ matrix.tag }}"
-        echo "Context: ${{ matrix.context }}"
-        echo "Dockerfile: ${{ matrix.dockerfile }}" 
