--- a/gpu/inference/requirements.txt
+++ b/gpu/inference/requirements.txt
@@ -1,20 +1,17 @@
-# GPU Inference Dependencies
-# Core dependencies
-numpy>=1.21.0
-psutil>=5.8.0
+vllm>=0.4.0
+openai>=1.0.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+pydantic>=2.0.0
+numpy>=1.24.0
+torch>=2.0.0
+transformers>=4.35.0
+accelerate>=0.24.0
+sentencepiece>=0.1.99
+protobuf>=3.20.0
+psutil>=5.9.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+pandas>=2.0.0
 pyyaml>=6.0
-
-# PyTorch with CUDA support
-torch>=1.12.0
-torchvision>=0.13.0
-torchaudio>=0.12.0
-
-# TensorFlow with GPU support
-tensorflow>=2.8.0
-
-# AI/ML frameworks
-transformers>=4.20.0
-datasets>=2.0.0
-
-# GPU monitoring
-nvidia-ml-py3>=7.352.0 
+requests>=2.31.0 
