feat: 完善 Dockerfile 和构建脚本
- 优化 Triton Server Dockerfile，添加健康检查和依赖
- 移除不必要的 COPY 命令，模型仓库运行时挂载
- 添加 tritonclient[all] 依赖包
- 优化两个版本的 build.sh 脚本，添加命令行参数支持
- 添加 --push、--no-cache、--tag 等构建选项
- 添加前置条件检查和错误处理
- 创建通用构建脚本 build-all.sh，支持同时构建两个版本
- 添加彩色输出和详细的构建信息
- 提供完整的使用指南和下一步操作提示

--- a/gpu/inference-triton/Dockerfile
+++ b/gpu/inference-triton/Dockerfile
@@ -7,18 +7,25 @@ WORKDIR /workspace
 RUN pip install --no-cache-dir \
     requests \
     numpy \
-    pandas
+    pandas \
+    tritonclient[all]
 
-# Copy model configuration and scripts
-COPY model_repository/ /opt/tritonserver/model_repository/
-COPY scripts/ /workspace/scripts/
+# Create model repository directory
+RUN mkdir -p /opt/tritonserver/model_repository
 
 # Set environment variables
 ENV TRITON_MODEL_REPO=/opt/tritonserver/model_repository
-ENV TRITON_SERVER_ARGS="--model-repository=${TRITON_MODEL_REPO} --log-verbose=1"
+ENV TRITON_SERVER_ARGS="--model-repository=${TRITON_MODEL_REPO} --log-verbose=1 --log-info=1"
 
 # Expose Triton Server ports
+# 8000: HTTP/REST API
+# 8001: gRPC API  
+# 8002: Metrics
 EXPOSE 8000 8001 8002
 
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+    CMD curl -f http://localhost:8000/v2/health/ready || exit 1
+
 # Default command
-CMD ["tritonserver", "--model-repository=/opt/tritonserver/model_repository"] 
+CMD ["tritonserver", "--model-repository=/opt/tritonserver/model_repository", "--log-verbose=1"] 
